--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "binary-tree",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "main": "main.js",
+  "author": "Anna Miroshnichenko",
+  "license": "MIT",
   "dependencies": {
     "d3": "^3.5.10",
     "flux": "^2.0.0",
@@ -9,21 +11,15 @@
     "underscore": "^1.7.0"
   },
   "devDependencies": {
-    "browserify": "~6.2.0",
-    "envify": "~3.0.0",
-    "react": "^0.12.0",
-    "reactify": "^0.15",
-    "watchify": "~2.1.0",
-    "uglifyjs": "2.4.10"
-  },
-  "scripts": {
-    "start": "watchify -o bundle.js -v -d .",
-    "build": "browserify . | uglifyjs -cm > bundle.min.js"
-  },
-  "browserify": {
-    "transform": [
-      "reactify",
-      "envify"
-    ]
+    "browserify": "^9.0.8",
+    "eslint": "^1.5.1",
+    "eslint-plugin-react": "^3.5.1",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^1.0.0",
+    "reactify": "^1.1.0",
+    "require-dir": "^0.3.0",
+    "uglify-js": "^2.4.20",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.1.2"
   }
 }
