--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "eslint-plugin-react": "^3.5.1",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.15",
+    "karma-browserify": "^4.4.2",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
     "reactify": "^1.1.0",
     "require-dir": "^0.3.0",
     "uglify-js": "^2.4.20",
