--- a/package.json
+++ b/package.json
@@ -5,26 +5,29 @@
   "author": "Anna Miroshnichenko",
   "license": "MIT",
   "dependencies": {
-    "d3": "^3.5.10",
-    "flux": "^2.0.0",
-    "react": "^0.12.0",
-    "underscore": "^1.7.0"
+    "d3": "3.5.10",
+    "flux": "2.0.0",
+    "react": "0.12.0",
+    "underscore": "1.7.0"
   },
   "devDependencies": {
-    "browserify": "^9.0.8",
-    "eslint": "^1.5.1",
-    "eslint-plugin-react": "^3.5.1",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^1.0.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.15",
-    "karma-browserify": "^4.4.2",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-jasmine": "^0.3.6",
-    "reactify": "^1.1.0",
-    "require-dir": "^0.3.0",
-    "uglify-js": "^2.4.20",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.1.2"
+    "browserify": "9.0.8",
+    "eslint": "1.5.1",
+    "eslint-plugin-react": "3.5.1",
+    "gulp": "4.0.2",
+    "gulp-eslint": "1.0.0",
+    "jasmine-core": "2.4.1",
+    "karma": "0.13.15",
+    "karma-browserify": "4.4.2",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-jasmine": "0.3.6",
+    "reactify": "1.1.0",
+    "require-dir": "1.0.0",
+    "uglify-js": "2.4.20",
+    "vinyl-source-stream": "2.0.0",
+    "watchify": "3.1.2"
+  },
+  "scripts": {
+    "start": "gulp default"
   }
 }
